# logos-blockchain-pocs

circom_circuits/Blend/: generate_inputs_for_poq.py  poq.circom
circom_circuits/Mantle/: generate_inputs_for_pol.py  pol_lib.circom
circom_circuits/ledger/: notes.circom
circom_circuits/misc/: constants.circom
da/subnets/network/: readme.md
da/subnets/network/dispersal/: README.md
da/subnets/s2nquic/: README.md
goas/cl/ledger/: Cargo.toml
goas/cl/ledger/src/: bundle.rs  constraint.rs  partial_tx.rs
goas/cl/risc0_proofs/: Cargo.toml
proof_of_leadership/risc0/prover/: Cargo.toml
proof_of_leadership/risc0/prover/src/: leader.rs
proof_of_leadership/risc0/risc0_proofs/: Cargo.toml
sz-poc-offsite-2025/evm/processor/: Cargo.toml
sz-poc-offsite-2025/evm/processor/src/: lib.rs
sz-poc-offsite-2025/evm/sequencer-node/src/: main.rs
sz-poc-offsite-2025/zksync/: README.md
