[package]
name = "evm-processor"
edition = { workspace = true }

[dependencies]
reth-ethereum = { workspace = true }
logos-blockchain-executor-http-client = { git = "https://github.com/logos-blockchain/logos-blockchain", branch = "master" }
reqwest = "0.11"
logos-blockchain-kzgrs-backend = { git = "https://github.com/logos-blockchain/logos-blockchain", branch = "master" }
bincode = "1"
reth-tracing = { workspace = true }
